Added new spec
